--- a/templates/include/header.html.twig
+++ b/templates/include/header.html.twig
@@ -1,8 +1,4 @@
-<?php
-
-/* 
-* To change this license header, choose License Headers in Project Properties.
-* To change this template file, choose Tools | Templates
-* and open the template in the editor.
-*/
-
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to Codingame</h1>
+    <p class="lead">The best way to become the best coder.</p>
+</div>
