update project repository for codingame

--- a/templates/include/header.html.twig
+++ b/templates/include/header.html.twig
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron" id="jumbotron">
     <h1 class="display-4">Welcome to Codingame</h1>
     <p class="lead">The best way to become the best coder.</p>
 </div>
