--- a/templates/include/menus.html.twig
+++ b/templates/include/menus.html.twig
@@ -1,8 +1,5 @@
-<?php
-
-/* 
-* To change this license header, choose License Headers in Project Properties.
-* To change this template file, choose Tools | Templates
-* and open the template in the editor.
-*/
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    {% include 'include/menus_home.html.twig' %}
+    {% include 'include/menus_category.html.twig' %}
+    {% include 'include/menus_admin.html.twig' %}
+</nav>
