update project repository for codingame

--- a/templates/include/menus.html.twig
+++ b/templates/include/menus.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     {% include 'include/menus_home.html.twig' %}
-    {% include 'include/menus_category.html.twig' %}
+    {% include 'include/menus_question.html.twig' %}
     {% include 'include/menus_admin.html.twig' %}
 </nav>
