--- a/templates/include/body.html.twig
+++ b/templates/include/body.html.twig
@@ -1,4 +1,13 @@
 <div class="rows">
-    <h1>{{ body.title }}</h1>
-    <p>{{ body.description |nl2br }}</p>
+    {% if url == 'home' %}
+        <div class="col-3">
+            <h1>{{ body.title }}</h1>
+            <p>{{ body.description |nl2br }}</p>
+        </div>
+    {% else %}
+        <div class="col-12">
+            <h1>{{ body.title }}</h1>
+            <p>{{ body.description |nl2br }}</p>
+        </div>
+    {% endif %}
 </div>
