--- a/templates/include/menus_home.html.twig
+++ b/templates/include/menus_home.html.twig
@@ -1,8 +1,8 @@
 <ul class="navbar-nav mr-auto">
     <li class="nav-item active">
-        <a class="nav-link" href="{{ '/' }}">{{ 'Home' }}<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ '/' }}">{{ 'home'|capitalize }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ 'about' }}">{{ 'about' }}</a>
+        <a class="nav-link" href="{{ 'about' }}">{{ 'about'|capitalize }}</a>
     </li>
 </ul>
