update project repository for codingame

--- a/templates/include/body.html.twig
+++ b/templates/include/body.html.twig
@@ -1,4 +1,4 @@
-<div class="rows">
+<div class="row">
     {% if url == 'home' %}
         <div class="col-3">
             <h1>{{ body.title }}</h1>
