--- a/templates/include/footer.html.twig
+++ b/templates/include/footer.html.twig
@@ -1,8 +1,12 @@
-<?php
-
-/* 
-* To change this license header, choose License Headers in Project Properties.
-* To change this template file, choose Tools | Templates
-* and open the template in the editor.
-*/
-
+<footer class="footer" id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-6">
+                © 2020 {{ app.request.httpHost }} | 1 place de la ville 75000 PARIS<br>
+                <a href="http://h.douin.free.fr" target="_blank">Webmaster: h.douin</a> | <a href="#" title="plan de site">Plan de Site</a>
+            </div>
+            <div class="col-ms-6">
+            </div>
+        </div>
+    </div>
+</footer>
