--- a/public/skin/css/styles.css
+++ b/public/skin/css/styles.css
@@ -95,6 +95,12 @@ button[name="friend-insert"]:hover span,
 button[name="friend-delete"]:hover span {
     color:#555;
 }
+#textarea {
+    max-width: none;
+    min-height: 150px;
+    width: 100%;
+}
+
 .loader {
     background:#FFCC33;
     position:absolute;
@@ -116,6 +122,7 @@ button[name="friend-delete"]:hover span {
 -moz-animation:spin 1s linear infinite;
 animation:spin 1s linear infinite;
 }
+
 @keyframes spin {
     100% { -webkit-transform:rotate(360deg); transform:rotate(360deg); }
 }
