--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,12 @@
 <html>
     {% include 'include/head.html.twig' %}
     <body>
-        <div class="container">
+        <div class="container-sm">
             {% include 'include/menus.html.twig' %}
             {% include 'include/header.html.twig' %}
             {% include 'include/body.html.twig' %}
             {% block body %}{% endblock %}
+            {% include 'include/footer.html.twig' %}
         </div>
         {% block javascripts %}{% endblock %}
     </body>
