--- a/templates/public/practice/php/question-5.html.twig
+++ b/templates/public/practice/php/question-5.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="rows">
+    <div class="row">
         <div class="col-12">
             <h3>{{ question.title }}</h3>
             <p>{{ question.description }}</p>            
@@ -13,19 +13,20 @@
             <p>
                 <textarea class="form-control" placeholder="Put your code here...">
                     {% if question.response.answer %}
-                        {{ question.response.answer|nl2br }}
+                        {{ question.response.answer|raw }}
                     {% endif %}
                 </textarea>
             </p>
         </div>
     </div>
-    <div class="rows">
+    <div class="row">
         <div class="col-12">
             <h5>Your result</h5>
-            <div id="my-result">
-                
 
-            </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script type="text/javascript" src="{{ asset('skin/js/public/question.js') }}"></script>
 {% endblock %}
