--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,6 @@
             {% block body %}{% endblock %}
             {% include 'include/footer.html.twig' %}
         </div>
-        {% block javascripts %}{% endblock %}
+        {% block javascript %}{% endblock %}
     </body>
 </html>
