--- a/templates/public/practice/php/question-1.html.twig
+++ b/templates/public/practice/php/question-1.html.twig
@@ -11,7 +11,7 @@
         <div class="col-12">
             <h5>Your code</h5>
             <p>
-                <textarea class="form-control" placeholder="Put your code here...">
+                <textarea id="textarea" class="form-control" placeholder="Put your code here...">
                     {% if question.response.answer %}
                         {{ question.response.answer|nl2br }}
                     {% endif %}
@@ -34,4 +34,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+    <script type="text/javascript" src="{{ asset('skin/js/public/question.js') }}"></script>
 {% endblock %}
