--- a/templates/include/head.html.twig
+++ b/templates/include/head.html.twig
@@ -1,9 +1,10 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        {% block title %}
-            {{ url~' | '~app.request.httpHost }}
-        {% endblock %}</title>
+    {% block title %}
+        {{ url~' | '~app.request.httpHost }}
+    {% endblock %}
+    </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ asset('skin/css/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ asset('skin/css/styles.css') }}">
