--- a/templates/public/practice/php/question-5.html.twig
+++ b/templates/public/practice/php/question-5.html.twig
@@ -11,11 +11,14 @@
         <div class="col-12">
             <h5>Your code</h5>
             <p>
-                <textarea class="form-control" placeholder="Put your code here...">
+                <textarea id="textarea" class="form-control" placeholder="Put your code here..." data-id="{{ question.response.id }}">
                     {% if question.response.answer %}
                         {{ question.response.answer|raw }}
                     {% endif %}
                 </textarea>
+            </p>
+            <p>
+                <button id="sendmycode" type="button" class="btn btn-primary">Send my code</button>
             </p>
         </div>
     </div>
