--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,9 @@
             {% block body %}{% endblock %}
             {% include 'include/footer.html.twig' %}
         </div>
-        <div id="haut"></div>
+        <div id="haut">
+            <i class="fa fa-arrow-up"></i>
+        </div>
         {% block javascript %}{% endblock %}
     </body>
 </html>
