--- a/templates/admin/listing/question.html.twig
+++ b/templates/admin/listing/question.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - listing user{% endblock %}
+{% block title %}Admin - listing question{% endblock %}
 
 {% block body %}
 
