update project repository for codingame

--- a/templates/include/menus_question.html.twig
+++ b/templates/include/menus_question.html.twig
@@ -1,3 +1,4 @@
+{% if 'admin' not in app.request.attributes.get('_route') %}
 <ul class="navbar-nav mr-auto">
     {% for category in categories %}
         <li class="nav-item dropdown">
@@ -14,3 +15,4 @@
         </li>
     {% endfor %}
 </ul>
+{%  endif %}
