--- a/templates/admin/listing/category.html.twig
+++ b/templates/admin/listing/category.html.twig
@@ -1,26 +1,23 @@
-{# templates/admin/listing/question.html.twig #}
+{# templates/admin/listing/category.html.twig #}
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - listing question{% endblock %}
+{% block title %}Admin - listing category{% endblock %}
 
 {% block body %}
     <div class="col-xs-12">
         <table class="table" width="100%">
             <tbody>
                 <tr>
-                    <th>Category</th>
                     <th>Title</th>
                     <th>Slug</th>
-                    <th>description</th>
                 </tr>
                 {% for row in rows %}
                 <tr id="{{ 'row'~row.id }}">
-                    <td>{{ row.categories.title }}</td>
                     <td>{{ row.title }}</td>
-                    <td>{{ row.description }}</td>
+                    <td>{{ row.slug }}</td>
                     <td>
-                        <a href="{{ path('admin_question_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
+                        <a href="{{ path('admin_category_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
                     </td>
                 </tr>
                 {% endfor %}
