--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     {% include 'include/head.html.twig' %}
     <body>
-        <div class="container-sm" id="container">
+        <div class="container" id="container">
             {% include 'include/menus.html.twig' %}
             {% include 'include/header.html.twig' %}
             {% include 'include/body.html.twig' %}
