--- a/templates/admin/form/category.html.twig
+++ b/templates/admin/form/category.html.twig
@@ -13,6 +13,12 @@
         <p class="form-group">
             {{form_row(form_edit.slug)}}
         </p>
+        <p class="form-group">
+            {{form_row(form_edit.submit)}}
+        </p>
+        <p class="form-group">
+            <a href="{{ path('admin_category_listing') }}">Back to listing</a>
+        </p>
         {{form_end(form_edit)}}
     </div>
 {% endblock %}
