--- a/templates/admin/listing/response.html.twig
+++ b/templates/admin/listing/response.html.twig
@@ -1,7 +1,29 @@
+{# templates/admin/listing/response.html.twig #}
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - listing question{% endblock %}
+{% block title %}Admin - listing response{% endblock %}
 
 {% block body %}
+    <div class="col-xs-12">
+        <table class="table" width="100%">
+            <tbody>
+                <tr>
+                    <th>Category</th>
+                    <th>Title</th>
+                </tr>
+                {% for row in rows %}
+                    {{ dump(row) }}
+                <tr id="{{ 'row'~row.id }}">
+{#                    <td>{{ row.question.categories.title }}</td>#}
+                    <td>{{ row.question.title }}</td>
+                    <td>
+                        <a href="{{ path('admin_response_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 {% endblock %}
