--- a/templates/public/practice/php/question-4.html.twig
+++ b/templates/public/practice/php/question-4.html.twig
@@ -9,16 +9,16 @@
     </div>
     <div class="row">
         <div class="col-12">
+            {% set response_id = response ? response : null %}
+            {% set response_answer = response ? response : null %}
             <h5>Your code</h5>
             <p>
-                <textarea id="textarea" class="form-control textarea" placeholder="Put your code here..." data-id="{{ question.response.id }}">
-                    {% if question.response.answer %}
-                        {{ question.response.answer|trim }}
-                    {% endif %}
+                <textarea id="textarea" class="form-control" placeholder="Put your code here..." data-id="{{ response_id }}">
+                    {{ response_answer|nl2br }}
                 </textarea>
             </p>
             <p>
-                <button type="button" class="btn btn-primary" id="sendmycode">Send my code</button>
+                <button id="sendmycode" type="button" class="btn btn-primary">Send my code</button>
             </p>
         </div>
     </div>
