--- a/templates/public/practice/php/question-5.html.twig
+++ b/templates/public/practice/php/question-5.html.twig
@@ -9,12 +9,12 @@
     </div>
     <div class="rows">
         <div class="col-12">
+            {% set response_id = response ? response : null %}
+            {% set response_answer = response ? response : null %}
             <h5>Your code</h5>
             <p>
-                <textarea id="textarea" class="form-control" placeholder="Put your code here..." data-id="{{ question.response.id }}">
-                    {% if question.response.answer %}
-                        {{ question.response.answer|raw }}
-                    {% endif %}
+                <textarea id="textarea" class="form-control" placeholder="Put your code here..." data-id="{{ response_id }}">
+                    {{ response_answer|nl2br }}
                 </textarea>
             </p>
             <p>
