update project repository for codingame

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     {% include 'include/head.html.twig' %}
     <body>
         <div class="container" id="container">
+            <div id="msg"></div>
             {% include 'include/menus.html.twig' %}
             {% include 'include/header.html.twig' %}
             {% include 'include/body.html.twig' %}
