--- a/templates/admin/listing/response.html.twig
+++ b/templates/admin/listing/response.html.twig
@@ -13,10 +13,9 @@
                     <th>Title</th>
                 </tr>
                 {% for row in rows %}
-                    {{ dump(row) }}
                 <tr id="{{ 'row'~row.id }}">
-{#                    <td>{{ row.question.categories.title }}</td>#}
-{#                    <td>{{ row.question.title }}</td>#}
+                    <td>{{ row.question.categories.title }}</td>
+                    <td>{{ row.question.title }}</td>
                     <td>
                         <a href="{{ path('admin_response_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
                     </td>
