--- a/templates/admin/listing/body.html.twig
+++ b/templates/admin/listing/body.html.twig
@@ -5,6 +5,10 @@
 {% block title %}Admin - listing question{% endblock %}
 
 {% block body %}
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_body_new') }}" class="btn btn-primary">Add body</a></p>
+        <span style="float:right">{{ 'Total: '~rows|length }}</span>
+    </div>
     <div class="row">
         <table class="table" width="100%">
             <tbody>
@@ -12,26 +16,23 @@
                     <th>Title</th>
                     <th>Slug</th>
                     <th>description</th>
-                    <th>Edit</th>
-                    <th>Delete</th>
+                    <th></th>
+                    <th></th>
                 </tr>
                 {% for row in rows %}
-                    <tr id="{{ 'row'~row.id }}">
-                        <td>{{ row.title }}</td>
-                        <td>{{ row.slug }}</td>
-                        <td>{{ row.description }}</td>
-                        <td>
-                            <a href="{{ path('admin_body_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
-                        </td>
-                        <td>
-                            <a href="{{ path('admin_body_delete', { 'id':row.id }) }}" class="btn"><i class="fa fa-trash"></i></a>
-                        </td>
-                    </tr>
+                <tr id="{{ 'row'~row.id }}">
+                    <td>{{ row.title }}</td>
+                    <td>{{ row.slug }}</td>
+                    <td>{{ row.description }}</td>
+                    <td width="50">
+                        <a href="{{ path('admin_body_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
+                    </td>
+                    <td width="50">
+                        <a href="{{ path('admin_body_delete', { 'id':row.id }) }}" class="btn"><i class="fa fa-trash"></i></a>
+                    </td>
+                </tr>
                 {% endfor %}
             </tbody>
         </table>
-    </div>
-    <div class="row">
-        <a href="{{ path('admin_body_new') }}" class="btn btn-primary">Add body</a>
     </div>
 {% endblock %}
