--- a/templates/admin/listing/response.html.twig
+++ b/templates/admin/listing/response.html.twig
@@ -5,19 +5,27 @@
 {% block title %}Admin - listing response{% endblock %}
 
 {% block body %}
-    <div class="col-xs-12">
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_response_new') }}" class="btn btn-primary">Add response</a></p>
+        <span style="float:right">{{ 'Total: '~rows|length }}</span>
+    </div>
+    <div class="row">
         <table class="table" width="100%">
             <tbody>
                 <tr>
                     <th>Category</th>
                     <th>Title</th>
+                    <th></th>
                 </tr>
                 {% for row in rows %}
                 <tr id="{{ 'row'~row.id }}">
                     <td>{{ row.question.categories.title }}</td>
                     <td>{{ row.question.title }}</td>
-                    <td>
+                    <td width="50">
                         <a href="{{ path('admin_response_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
+                    </td>
+                    <td width="50">
+                        <a href="{{ path('admin_response_delete', { 'id':row.id }) }}" class="btn"><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
                 {% endfor %}
