update project repository for codingame

--- a/templates/admin/form/user.html.twig
+++ b/templates/admin/form/user.html.twig
@@ -15,6 +15,11 @@
                 {{form_row(form_edit.password)}}
             </p>
             <p class="form-group">
+                {{form_row(form_edit.roles)}}
+            </p>
+        </div>
+        <div class="col">
+            <p class="form-group">
                 {{form_row(form_edit.lastname)}}
             </p>
             <p class="form-group">
@@ -23,8 +28,6 @@
             <p class="form-group">
                 {{form_row(form_edit.email)}}
             </p>
-        </div>
-        <div class="col">
             <p class="form-group">
                 {{form_row(form_edit.phone)}}
             </p>
