--- a/templates/include/menus_home.html.twig
+++ b/templates/include/menus_home.html.twig
@@ -5,4 +5,7 @@
     <li class="nav-item">
         <a class="nav-link" href="{{ 'about' }}">{{ 'about'|capitalize }}</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ 'login' }}">{{ 'login'|capitalize }}</a>
+    </li>
 </ul>
