--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,7 @@
             <input type="password" name="password" id="inputPassword" class="form-control" required>
         </p>
         <p class="form-group">
-            <button class="btn btn-lg btn-primary" type="submit">Login</button>
+            <button class="btn btn-primary" type="submit">Login</button>
         </p>
         <input type="hidden" name="_csrf_token"value="{{ csrf_token('authenticate') }}">
 
