--- a/templates/include/menus_admin.html.twig
+++ b/templates/include/menus_admin.html.twig
@@ -1,4 +1,5 @@
-<ul class="navbar-nav mr-auto">
+{% if is_granted('ROLE_ADMIN') %}
+    <ul class="navbar-nav mr-auto">
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Admin
@@ -10,3 +11,4 @@
         </div>
     </li>
 </ul>
+{% endif %}
