--- a/templates/public/practice/php/question.html.twig
+++ b/templates/public/practice/php/question.html.twig
@@ -14,7 +14,7 @@
             <h5>Your code</h5>
             <p>
                 <textarea id="textarea" class="form-control" placeholder="Put your code here..." data-id="{{ question_id }}">
-                    {{ response_answer|nl2br }}
+                    {{ response_answer }}
                 </textarea>
             </p>
             <p>
