update project repository for codingame

--- a/templates/include/body.html.twig
+++ b/templates/include/body.html.twig
@@ -1,5 +1,5 @@
 {% if 'admin' not in app.request.attributes.get('_route') %}
-<div class="row">
+<div id="body" class="row">
     {% if bodies['h2'] is defined %}
         <div class="col-12">
             <h1>{{ bodies['h1'] }}</h1>
