--- a/public/skin/css/styles.css
+++ b/public/skin/css/styles.css
@@ -40,7 +40,16 @@
 #haut:hover {
     color:#FFF;
 }
-
+#body .fa {
+    background: #000;
+    font-size: 30px;
+    line-height: 50px;
+    color: #FFF;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+}
 input, .form-control {
     max-width:300px;
 }
