--- a/templates/include/menus_admin.html.twig
+++ b/templates/include/menus_admin.html.twig
@@ -5,7 +5,7 @@
             Admin
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            {% for entity in ['body','category','page','question','response','user'] %}
+            {% for entity in entities %}
                 <a class="dropdown-item" href="{{ '/admin/'~entity~'/listing' }}">{{ entity|capitalize }}</a>
             {% endfor %}
         </div>
